# cradle

./: .copier-answers.yml  .env  .gitignore  .pre-commit-config.yaml  .rhiza.env  .rhiza.history  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  copyright.txt  pyproject.toml  requirements.txt  ruff.toml  script.py  taskfile.yml  update.sh  update_template.sh
.github/: CONTRIBUTING.md  copilot-instructions.md  dependabot.yml  renovate.json  template.yml
.github/workflows/: book.yml  ci.yml  codeql.yml  docker.yml  minibook.yml  pre-commit.yml  release.yml  rhiza_ci.yml  rhiza_mypy.yml  rhiza_pre-commit.yml  rhiza_release.yml  sync.yml  tag.yml
.rhiza/: history  template-bundles.yml  template.yml
.rhiza/requirements/: README.md
actions/age/: action.yml
actions/book/: action.yml
actions/coverage/: action.yml
actions/cradle/: action.yml
actions/deptry/: action.yml
actions/docker/: action.yml
actions/environment/: action.yml
actions/flow/: Dockerfile  action.yml
actions/jupyter/: action.yml
actions/latex/: action.yml
actions/marimo/: action.yml
actions/minibook/: action.yml
actions/pdoc/: action.yml
actions/pre-commit/: action.yml
actions/publish/: action.yml
actions/pyodide/: action.yml
actions/tag/: action.yml
actions/test/: action.yml
actions/updater/: action.yml
age/: dependency-age-sorted.txt  dependency-age.txt
book/: _config.yml  _toc.yml  genindex.html  objects.inv  search.html  searchindex.js
book/docs/: api.html  index.html  reports.html
book/marimo/: demo.py  hello.py
cradle/: __init__.py
cvx/cradle/: cli.py  git.py  main.py
docker/: Dockerfile  push.sh
docs/: tasks.md
marimo/: demo.html
pdoc/: cradle.html  index.html  search.js
pdoc/cradle/: cli.html  utils.html
src/cradle/: __init__.py  cli.py  config.py  templates.yaml
src/tests/: conftest.py  test_cli.py  test_git.py  test_git_dulwich.py  test_git_more.py  test_questions.py  test_shell.py  test_ui.py
tests/: conftest.py  test_cli.py  test_git.py  test_shell.py  test_ui.py
tests/coverage/: coverage.info  coverage.json  coverage.xml
tests/html-coverage/: class_index.html  function_index.html  index.html  status.json  z_17ea47680e4844f6___init___py.html  z_17ea47680e4844f6_gh_client_py.html  z_17ea47680e4844f6_git_py.html  z_17ea47680e4844f6_questions_py.html  (+2 more)
(+114 files in other folders)
