# Project metadata and package information
[project]
name = "qCradle"
version = "0.4.1"
description = "CLI to create repos"
readme = "README.md"
authors = [{ name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "copier>=9.8.0",
    "rich>=13.7.0",
    "pyyaml==6.0.3"
]

# URLs related to the project
[project.urls]
repository = "https://github.com/tschm/cradle"

# Optional dependencies for development
[project.optional-dependencies]
dev = [
    "pytest-cov==7.0.0",
    "pytest==9.0.2",
    "pre-commit==4.5.0",
    "pytest-mock==3.15.1",
    "marimo==0.18.4"
]

# Entry points for command-line scripts
[project.scripts]
qcradle = "cradle.cli:main"

# Build system configuration
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatch wheel build configuration
[tool.hatch.build.targets.wheel]
packages = ["src/cradle"]

# Hatch build configuration - files to include in the package
[tool.hatch.build]
include = [
    "LICENSE",    # Ensure the LICENSE file is included in your package
    "README.md",
    "demo.png",
    "src/cradle",
]

# Deptry dependency checker configuration
[tool.deptry]
# see https://deptry.com/usage/#pep-621-dev-dependency-groups
pep621_dev_dependency_groups = ["dev"]

[tool.deptry.package_module_name_map]
pyyaml = ["yaml"]
