# Project metadata
[project]
name = "cradle"
version = "0.5.0"
description = "GitHub Actions for Python projects"
readme = "README.md"
authors = [{ name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com" }]
requires-python = ">=3.11"
dependencies = []

# URLs related to the project
[project.urls]
repository = "https://github.com/tschm/cradle"

# Dependencies for development
[dependency-groups]
dev = []
